syntax = "proto3";
import "record.proto";
import "address.proto";

package com.blue.proto;

/*
 * 2. master -> worker
 * Master sends ranges and acknowledges worker to start distributing
 */

message DistributeStartRequest {
  repeated Range ranges = 1;  // map<worker_ip, range_begin_key>
}

message Range {
  Address address = 1;
  bytes begin_key = 2;
}

message DistributeStartResponse {
}

/*
 * 3. workerA -> workerB
 * Worker sends data chunks to the designated worker.
 */

message DistributeRequest {
  Address address = 1;
  repeated Record records = 2;
}

message DistributeResponse {
}

/*
 * 4. worker -> master
 * Worker acknowledges master that it finished distributing all the data.
 */

message DistributeCompleteRequest {
  Address address = 1;
}

message DistributeCompleteResponse {
}
