syntax = "proto3";

package com.blue.proto;

/*
 * 2. master -> worker
 * Master sends ranges and acknowledges worker to start distributing
 */

message DistributeStartRequest {
  map<string, bytes> ranges = 1;  // map<worker_ip, range_begin_key>
}

message DistributeStartResponse {
  bool success = 1;
}

service DistributeStartService {
  rpc DistributeStart(DistributeStartRequest) returns (DistributeStartResponse);
}