syntax = "proto3";

package com.blue.proto;

/*
 * 5. master -> worker
 * Master acknowledges worker to start sorting
 */

message SortStartRequest {
}

message SortStartResponse {
}

/*
 * 6. worker -> master
 * Worker acknowledges master that it finished sorting
 */

message SortCompleteRequest {
  string ip = 1;
}

message SortCompleteResponse {
}
