syntax = "proto3";
import "record.proto";

package com.blue.proto;

/*
 * 6. worker -> master
 * Worker acknowledges master that it finished sorting
 */

message SortCompleteRequest {
  string ip = 1;
  Record begin = 2;
  Record end = 3;
}

message SortCompleteResponse {
  bool success = 1;
}

service SortCompleteService {
  rpc SortComplete(SortCompleteRequest) returns (SortCompleteResponse);
}